# rust-github-status-notifier-cli

./: .appveyor.yml  .travis.yml  Cargo.toml  changelog.md  package-lock.json  readme.md
ci/: before_deploy.ps1  before_deploy.sh
src/: github_status_notifier.rs  main.rs
